--- a/portfolio.css
+++ b/portfolio.css
@@ -63,10 +63,17 @@
   letter-spacing: 1px;
 }
 
+.is-category-tag {
+  font-size: 12px;
+  line-height: 1em;
+  letter-spacing: 1px;
+}
+
 .is-body-text {
   font-size: 14px;
   line-height: 19px;
 }
+
 
 .is-size-0 {
   font-size: 10rem !important;
@@ -84,4 +91,15 @@
   .is-skill-tag {
     font-size: 27px;
   }
+}
+
+video {
+  width: 100%;
+  height: auto;
+}
+
+
+.confidential-blur{
+filter: blur(10px);
+-webkit-filter: blur(10px);
 }
